Commit page home css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.js">
     <link rel="icon" href="/assets/icons-logos/letra-p.png" type="image/png">
+    <!-- DATA AOS ANIMAÇÃO -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Petz</title>
 </head>
 <body>
@@ -198,7 +201,7 @@
     <section class="box-slider">
         <h1 class="title-slider">Produtos recomendados</h1>
         <div class="slider-container">
-            <button class="prev">❮</button>
+            <button class="anterior">❮</button>
             <div class="slider js-slider">      
                 <div class="card-slider">
                     <img src="assets/slider/product1.jpg" alt="">
@@ -251,7 +254,7 @@
                     <h3>R$ 80,90</h3>
                 </div>
             </div>
-            <button class="next">❯</button>
+            <button class="proximo">❯</button>
         </div>
     </section>
 
